fix: reapply dark mode stroke color to moon icon

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -14,7 +14,3 @@
 .controls > svg {
     margin-left: 20px;
 }
-
-.iconMoon {
-    color: var(--icon-moon);
-}
